mypkg/objects/Shipping_Address__c.object
<CustomObject>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shipping Address</relationshipLabel>
        <relationshipName>Shipping_Address</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>ZipCode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Shipping Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Shipping_City__c</columns>
        <columns>Shipping_Country__c</columns>
        <columns>Shipping_State__c</columns>
        <columns>Shipping_Street__c</columns>
        <columns>ZipCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Shipping_City__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shipping Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Address</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>